WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
79556
Fix the CopiedBlock offset alignment in a cross platform fashion
https://bugs.webkit.org/show_bug.cgi?id=79556
Summary
Fix the CopiedBlock offset alignment in a cross platform fashion
Mark Hahnenberg
Reported
2012-02-24 20:45:07 PST
Differences in compilers can cause badness with the way we currently do the padding of CopiedBlock to ensure that the payload is 8-byte aligned. We can refactor CopiedBlock in such a way as to make this a non-issue.
Attachments
Patch
(6.04 KB, patch)
2012-02-24 21:01 PST
,
Mark Hahnenberg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Hahnenberg
Comment 1
2012-02-24 21:01:39 PST
Created
attachment 128846
[details]
Patch
Filip Pizlo
Comment 2
2012-02-24 21:03:51 PST
Comment on
attachment 128846
[details]
Patch Looks right.
WebKit Review Bot
Comment 3
2012-02-25 00:06:15 PST
The commit-queue encountered the following flaky tests while processing
attachment 128846
[details]
: inspector/protocol/console-agent.html
bug 79563
(authors:
caseq@chromium.org
,
loislo@chromium.org
, and
pfeldman@chromium.org
) The commit-queue is continuing to process your patch.
WebKit Review Bot
Comment 4
2012-02-25 00:07:59 PST
Comment on
attachment 128846
[details]
Patch Clearing flags on attachment: 128846 Committed
r108888
: <
http://trac.webkit.org/changeset/108888
>
WebKit Review Bot
Comment 5
2012-02-25 00:08:03 PST
All reviewed patches have been landed. Closing bug.
Zoltan Herczeg
Comment 6
2012-02-25 09:19:08 PST
Nice. m_dummy should be deleted as well.
David Harrison
Comment 7
2012-02-27 10:48:36 PST
Mark's comments in Radar that he believes this resolves
rdar://10937628
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug